--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,5 @@
 on:
-  pull_request_review:
-    types: [submitted]
+  pull_request:
 
 jobs:
   # approved:
@@ -17,7 +16,6 @@ jobs:
         uses: actions/github-script@v7
         id: collab-check
         with:
-          github-token: ${{ secrets.COLLAB_CHECK_TOKEN }}
           result-encoding: string
           script: | 
             try {
