--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
               return res.status == "204" ? "auto-approve" : "manual-approval"
             } catch (error) {
               console.log("${{ github.event.pull_request.user.login }} is not a collaborator. Requiring Manual Approval to run PR Checks.")
+              console.log(error)
               return "manual-approval"
             }
   wait-for-approval:
