--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         uses: trstringer/manual-approval@v1
         with:
           secret: ${{ github.TOKEN }}
-          approvers: ${{ secrets.CODE_APPROVERS} # Replace with GitHub usernames, with the free version you can only have an issue assigned to one username
+          approvers: ${{ secrets.CODE_APPROVERS }}  # Replace with GitHub usernames, with the free version you can only have an issue assigned to one username
           minimum-approvals: 1
           issue-title: "Manual Approval Required for collab-check"
           issue-body: "Please approve or deny the deployment."
