--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,8 @@ jobs:
       runs-on: ubuntu-latest
       needs: [wait-for-approval]
       steps:
-          - run: echo "Tests RUN!"
+          - run: |
+              mkdir processedArtifacts
+              touch test.txt
+              echo "Tests RUN!" >> test.txt
 
